--- a/08_JavaWebApp/pom.xml
+++ b/08_JavaWebApp/pom.xml
@@ -18,7 +18,13 @@
     
     <dependencies>
         
-        
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
         
         <dependency>
             <groupId>jakarta.platform</groupId>
@@ -49,8 +55,11 @@
             <artifactId>maven-war-plugin</artifactId>
             <version>3.3.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>persistencia</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
